Javac2007/src/test/attr/error/cant_extend_intf_annotation.java
package test.attr.error;
interface InterfaceTest {}
public @interface cant_extend_intf_annotation extends InterfaceTest {}


